--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.3",
     "@google/genai": "^1.33.0",
     "react": "^19.2.3",
-    "lucide-react": "^0.561.0"
+    "lucide-react": "^0.561.0",
+    "@azure/msal-browser": "^4.25.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
