added google oauth

--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "test": "node --test"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
+    "@azure/msal-browser": "^4.25.1",
     "@google/genai": "^1.33.0",
-    "react": "^19.2.3",
+    "@supabase/supabase-js": "^2.87.3",
     "lucide-react": "^0.561.0",
-    "@azure/msal-browser": "^4.25.1"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
