--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -11,7 +11,7 @@ compatibility_date = "2024-12-01"
 
 [vars]
 # Frontend URL for CORS and redirects (change for production)
-FRONTEND_URL = "http://localhost:3000"
+FRONTEND_URL = "https://monofocus.pages.dev"
 # Microsoft tenant (use "common" for multi-tenant)
 MICROSOFT_TENANT = "common"
 
