--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -8,10 +8,20 @@ compatibility_date = "2024-12-01"
 #   GOOGLE_CLIENT_SECRET
 #   MICROSOFT_CLIENT_ID
 #   MICROSOFT_CLIENT_SECRET
+#   SUPABASE_URL
+#   SUPABASE_SERVICE_ROLE_KEY
+#   SUPABASE_JWT_SECRET
 
 [vars]
 # Frontend URL for CORS and redirects (change for production)
 FRONTEND_URL = "https://monofocus.pages.dev"
 # Microsoft tenant (use "common" for multi-tenant)
 MICROSOFT_TENANT = "common"
+
+# KV namespace for OAuth state (CSRF protection)
+# Create with: wrangler kv:namespace create "OAUTH_STATE"
+[[kv_namespaces]]
+binding = "OAUTH_STATE"
+id = "7127fac8ed864c16ad904f322563ce4e"
+preview_id = "bde5470a5532408aad8ab36bb204480f"
 
